# seanymph

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  publish.yml
docs/: index.md
docs/API Reference/: barplot.md  countplot.md  histplot.md  index.md  kdeplot.md  lineplot.md
docs/API Reference/mermaidplotlib/: xychart.md
docs/examples/: q1_breakdown.md  sales_2024.md
docs/tests/: TestCategoricalHorizontal.md  TestCategoricalVertical.md  TestNumberFormatting.md  TestNumericHorizontal.md  TestNumericVertical.md  index.md
docs/tests/TestCategoricalHorizontal/: test_lineh.md
docs/tests/TestCategoricalVertical/: test_series_order_preserved.md  test_xlabel_appears_before_brackets.md
docs/tests/TestColors/: test_no_color_no_init_block.md  test_partial_colors_use_fallback.md  test_single_series_color.md
docs/tests/TestDataFrame/: test_basic_bar.md  test_basic_count_x.md  test_basic_count_y.md  test_estimator_max.md  test_estimator_sum.md  test_horizontal_inferred_from_categorical_y.md  test_numeric_x_sorted.md  test_order.md
docs/tests/TestHue/: test_hue_produces_two_series.md  test_palette_dict.md  test_palette_list.md
docs/tests/TestMultiSeries/: test_series_order_preserved_three.md  test_two_bars.md  test_two_lines.md
docs/tests/TestNumberFormatting/: test_negative_values.md
docs/tests/TestNumericHorizontal/: test_barh_and_line_numeric.md  test_barh_numeric.md  test_lineh_numeric.md  test_ylabel_with_numeric_horizontal.md
docs/tests/TestNumericVertical/: test_ylim_with_numeric_x.md
docs/tests/mermaidplotlib/TestCategoricalHorizontal/: test_barh.md  test_barh_and_line.md  test_xlabel_with_barh.md  test_ylabel_with_barh.md
docs/tests/mermaidplotlib/TestCategoricalVertical/: test_line.md  test_multiword_labels_are_quoted.md  test_title.md  test_ylabel_and_ylim.md  test_ylabel_without_ylim.md
docs/tests/mermaidplotlib/TestColors/: test_color_on_barh.md  test_multiple_series_colors.md
sea_nymph/: _utils.py  barplot.py  countplot.py  histplot.py  kdeplot.py  lineplot.py
sea_nymph/mermaidplotlib/: xychart.py
seanymph/: __init__.py  _utils.py  barplot.py  countplot.py  figure.py  lineplot.py  xychart.py
seanymph/mermaidplotlib/: xychart.py
tests/: conftest.py  test_barplot.py  test_countplot.py  test_figure.py  test_lineplot.py
(+52 files in other folders)
