[project]
name = "sea-nymph"
version = "0.1.0"
description = "A matplotlib-style Python library for generating Mermaid diagrams"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "narwhals>=2.17.0",
]

[build-system]
requires = ["uv_build>=0.6.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
docs = [
    "zensical>=0.0.23",
]
dev = [
    "polars>=1.38.1",
    "pytest>=8",
]
