[project]
name = "sea-nymph"
version = "1.1.0"
description = "A matplotlib-style Python library for generating Mermaid diagrams"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Excidion"},
]
license = "Apache-2.0"
dependencies = [
    "narwhals>=2.17.0",
]

[project.urls]
Homepage = "https://excidion.github.io/sea-nymph"
Repository = "https://github.com/Excidion/sea-nymph"

[build-system]
requires = ["uv_build>=0.6.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.interrogate]
ignore-init-method = true
ignore-private = true
ignore-magic = true
ignore-semiprivate = true
ignore-module = true
fail-under = 100
generate-badge = "docs/API Reference"

[tool.pydoclint]
style = "google"
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false

[dependency-groups]
docs = [
    "zensical>=0.0.23",
    "mkdocstrings[python]>=0.27",
    "interrogate>=1.7.0",
]
dev = [
    "polars>=1.38.1",
    "pre-commit-uv>=4.2.1",
    "pytest>=8",
]
